--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
     <dependency>
       <groupId>org.fusesource.hawtjni</groupId>
       <artifactId>hawtjni-runtime</artifactId>
-      <version>1.10</version>
+      <version>1.15</version>
     </dependency>
     <dependency>
       <groupId>junit</groupId>
@@ -24,44 +24,45 @@
       <plugin>
         <groupId>org.codehaus.mojo</groupId>
         <artifactId>cobertura-maven-plugin</artifactId>
-        <version>2.6</version>
-        <configuration>
-          <formats>
-            <format>html</format>
-          </formats>
-        </configuration>
+        <version>2.7</version>
       </plugin>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-javadoc-plugin</artifactId>
-        <version>2.9.1</version>
+        <version>2.10.4</version>
       </plugin>
     </plugins>
   </reporting>
 
   <properties>
     <mpfr.cppflags>
+      -I/usr/local/Cellar/mpfr/3.1.5/include/  -I/usr/local/Cellar/gmp/6.1.2/include/
     </mpfr.cppflags>
     <mpfr.build>
     </mpfr.build>
     <mpfr.libs>
-      -lmpfr -lgmp
+      /usr/local/Cellar/mpfr/3.1.5/lib/libmpfr.a /usr/local/Cellar/gmp/6.1.2/lib/libgmp.a
     </mpfr.libs>
   </properties>
 
   <build>
     <plugins>
       <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-clean-plugin</artifactId>
+        <version>3.0.0</version>
+      </plugin>
+      <plugin>
         <artifactId>maven-compiler-plugin</artifactId>
-        <version>3.0</version>
+        <version>3.6.1</version>
         <configuration>
-          <source>1.6</source>
-          <target>1.6</target>
+          <source>1.8</source>
+          <target>1.8</target>
         </configuration>
       </plugin>
       <plugin>
         <artifactId>maven-failsafe-plugin</artifactId>
-        <version>2.17</version>
+        <version>2.20</version>
         <executions>
           <execution>
             <goals>
@@ -74,7 +75,7 @@
       <plugin>
         <groupId>org.fusesource.hawtjni</groupId>
         <artifactId>maven-hawtjni-plugin</artifactId>
-        <version>1.10</version>
+        <version>1.15</version>
         <executions>
           <execution>
             <goals>
@@ -150,8 +151,8 @@
                 <arg>CPPFLAGS=${mpfr.cppflags} -mmacosx-version-min=10.6</arg>
                 <arg>--build=${mpfr.build}</arg>
                 <arg>--with-universal</arg>
-                <arg>CFLAGS=-mmacosx-version-min=10.6</arg>
-                <arg>LDFLAGS=-mmacosx-version-min=10.6</arg>
+                <arg>CFLAGS=-mmacosx-version-min=10.12</arg>
+                <arg>LDFLAGS=-mmacosx-version-min=10.12</arg>
               </configureArgs>
               <platform>osx</platform>
             </configuration>
