--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,11 @@
         <groupId>org.codehaus.mojo</groupId>
         <artifactId>cobertura-maven-plugin</artifactId>
         <version>2.7</version>
+        <configuration>
+          <formats>
+            <format>html</format>
+          </formats>
+        </configuration>
       </plugin>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
